[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=ddns_clienter_core --cov-report html"
asyncio_mode = "auto"
DJANGO_SETTINGS_MODULE = "ddns_clienter.settings"

[tool.isort]
profile = "black"

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
ignore = "H021,H006,D018,H023,H030,H031" # H023,H030,H031 应该是djlint的bug
